# claude-plan-reader

./: .gitignore  CLAUDE.md  CONTRACT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.mock.config.ts
scripts/: capture-annotations.mjs  hook-ownership.test.sh  install.sh  seed-fixture-tree.sh  sidecar-build.mjs  test-hook.sh
sidecar/: backoff.test.ts  backoff.ts  cli-plans.test.ts  cli-plans.ts  env-overrides.test.ts  env-overrides.ts  frames.test.ts  frames.ts  index.ts  model-effort.ts  normalize.test.ts  normalize.ts  permissions.test.ts  permissions.ts  quota.test.ts  quota.ts  session-resume.test.ts  session-resume.ts  session-start.test.ts  session-start.ts  shutdown.test.ts  shutdown.ts  tsconfig.json  user-content.test.ts  user-content.ts
src/: auto-resume-setting.test.ts  auto-resume-setting.ts  chain.test.ts  contract.test.ts  cwd.test.ts  cwd.ts  cwdstate.test.ts  feedback.test.ts  feedback.ts  filter.test.ts  filter.ts  main.c5-inprocess-bar.test.ts  main.comment-add-button.test.ts  main.comments-guard.test.ts  main.feedback.test.ts  main.hook.test.ts  main.inproc-review.test.ts  main.orchestrator-gate.test.ts  main.reload-guard.test.ts  main.resume-banner.test.ts  main.review.test.ts  main.test.ts  main.ts  model-picker.test.ts  model-picker.ts  notify.test.ts  notify.ts  prototype.test.ts  prototype.ts  render-guard.test.ts  render-guard.ts  resolve.test.ts  resolve.ts  review.test.ts  review.ts  styles.css  titlebar.test.ts  titlebar.ts  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: cwd_spike.rs
src-tauri/src/: agent.rs  lib.rs  plan_tree.rs
(+124 files in other folders)
