[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# File-watch stack — pinned to reproducible versions (verified against crates.io 2026-05).
# notify-debouncer-full 0.7.0 (>=0.4) uses the RecommendedCache file-ID cache internally,
# which is what makes atomic-save/rename tracking reliable on macOS. Its current stable
# constructor is the 3-arg `new_debouncer(timeout, tick_rate, handler)` form (verified by
# compiling against docs.rs/0.7.0 — the 4-arg `RecommendedCache::new()` form is not in any
# released stable version).
notify = "=8.2.0"
notify-debouncer-full = "=0.7.0"
dirs = "=6.0.0"
# base64 for `read_image_as_data_url` — encodes local image bytes into a `data:` URL
# the WebView can load directly (it cannot fetch `file://`). 0.22 is the current stable
# line; the deprecated free fns are gone, so we use the Engine API
# (`general_purpose::STANDARD.encode`).
base64 = "0.22"

